.openshift/Deployment_apps_v1_solace-toolkit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/JRBowman/solace-toolkit.git
  labels:
    app: solacetk-ui
    app.kubernetes.io/component: solacetk-ui
    app.kubernetes.io/instance: solacetk-ui
    app.kubernetes.io/name: solacetk-ui
    app.kubernetes.io/part-of: solacetk-dev
    app.openshift.io/runtime: angularjs
  name: solacetk-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: solacetk-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: solacetk-ui
        deploymentconfig: solacetk-ui
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/bowman-dev/solacetk-ui:latest
        imagePullPolicy: Always
        name: solacetk-ui
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
