.openshift/winserver-iis-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solace-api
spec:
  selector:
    app: winserver-iis
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
