.openshift/winserver-iis-identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solacetk-identity
spec:
  selector:
    app: winserver-iis
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
