.openshift/winserver-iis-second-app-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: solacetk-identity
  labels: {}
spec:
  to:
    kind: Service
    name: solacetk-api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  port:
    targetPort: 8081
